Adjusted font color and sizes; fixed input zoom isue on iOS

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,7 @@ $vin-blue: #5bb7db;
 $vin-green: #60b044;
 $vin-red: #ff0000;
 
+
 /* Styles */
 body {
   font: 18px 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -41,26 +42,33 @@ html,body,#app,[data-reactroot]{
 .top-container, .bottom-container {
   padding: 0;
   margin: 0;
-  //flex: 0 0 100%;
   max-height: 50%;
   min-height: 50%;
   max-width: 100%;
   min-width: 100%;
-  background: lightcyan;
   //padding: .5em;
   overflow: hidden;
 }
-.bottom-container {
-  background: sandybrown;
+
+hr.divider { 
+  border: 0 none;
+  width: 100%;
+  height: 1px;
+  background-color:#EBEBEB;
+  color:#EBEBEB;
+  margin: 0px 0px;
 }
 
-input, textarea {
-  max-width:100%
+input {
+  font-size: 18px;
+  margin-top: 50px;
 }
 
-hr.divider {
-    border: 0;
-    height: 0;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+/****** WeatherDisplay ******/
+
+.weather-display > * {
+  color: #FFFFFF;
+  font-weight: bold;
 }
+
+/*** (end WeatherDisplay) ***/
